<resources>
    <string name="app_name">Blood Bank</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_information">My information</string>
    <string name="name">Name:</string>
    <string name="mobile_number">mobile Number</string>
    <string name="email">Email</string>
    <string name="name_">Name</string>
    <string name="adress">Adress</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="city">City</string>
    <string name="gender">Gender</string>
    <string name="male">male</string>
    <string name="female">Female</string>
    <string name="other">other</string>
    <string name="blood_group">Blood Group</string>
    <string name="quantity">Quantity</string>
    <string name="ml">ml</string>
    <string name="send_request">Send Request</string>
    <string name="log_out">Log out</string>
    <string name="register">Register</string>
    <string name="registration_form">Registration form</string>
    <string name="donate_blood">Donate Blood</string>
    <string name="request_blood">Request Blood</string>
</resources>