<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditProfileActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150sp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:src="@drawable/account_logo"
        android:contentDescription="TODO" />

   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       >
       <LinearLayout
           android:layout_margin="20dp"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">
           <TextView

               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/name_"
               android:textStyle="bold"
               android:textSize="20sp"
               android:layout_margin="10dp"/>
           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:boxCornerRadiusBottomEnd="10dp"
               app:boxCornerRadiusBottomStart="10dp"
               app:boxCornerRadiusTopEnd="10dp"
               app:boxCornerRadiusTopStart="10dp">

               <EditText
                   android:id="@+id/name"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="10dp"
                   android:autofillHints=""
                   android:hint="@string/name_"
                   android:inputType="text" />
           </com.google.android.material.textfield.TextInputLayout>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/email"
               android:textStyle="bold"
               android:textSize="20sp"
               android:layout_margin="10dp"/>

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:boxCornerRadiusBottomEnd="10dp"
               app:boxCornerRadiusBottomStart="10dp"
               app:boxCornerRadiusTopEnd="10dp"
               app:boxCornerRadiusTopStart="10dp"
               >
               <EditText
                   android:id="@+id/email"
                   android:layout_margin="10dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/email"
                   android:inputType="textEmailAddress"
                   android:autofillHints="" />
           </com.google.android.material.textfield.TextInputLayout>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/mobile_number"
               android:textStyle="bold"
               android:textSize="20sp"
               android:layout_margin="10dp"/>

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:boxCornerRadiusBottomEnd="10dp"
               app:boxCornerRadiusBottomStart="10dp"
               app:boxCornerRadiusTopEnd="10dp"
               app:boxCornerRadiusTopStart="10dp"
               >
               <EditText
                   android:id="@+id/mobile_num"
                   android:layout_margin="10dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/mobile_number"
                   android:maxLength="12"
                   android:inputType="number"
                   android:autofillHints="" />
           </com.google.android.material.textfield.TextInputLayout>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/gender"
               android:textStyle="bold"
               android:textSize="20sp"
               android:layout_margin="10dp"/>

          <RadioGroup
              android:id="@+id/gender_radio"
              android:layout_margin="10dp"
              android:padding="10dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
              <RadioButton
                  android:id="@+id/male"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/male"/>
              <RadioButton
                  android:id="@+id/female"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/female"/>
              <RadioButton
                  android:id="@+id/other"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/other"/>

          </RadioGroup>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/blood_group"
               android:textStyle="bold"
               android:textSize="20sp"
               android:layout_margin="10dp"/>
           <Spinner
               android:id="@+id/Spinner_blood_group"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:spinnerMode="dropdown"
               android:layout_margin="10dp"
               android:padding="10dp"
               />
           <TextView

               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/address"
               android:textStyle="bold"
               android:textSize="20sp"
               android:layout_margin="10dp"/>
           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:boxCornerRadiusBottomEnd="10dp"
               app:boxCornerRadiusBottomStart="10dp"
               app:boxCornerRadiusTopEnd="10dp"
               app:boxCornerRadiusTopStart="10dp"
               >
               <EditText
                   android:id="@+id/address"
                   android:layout_margin="10dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/address"
                   android:inputType="text"
                   android:autofillHints="" />

           </com.google.android.material.textfield.TextInputLayout>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/city"
               android:textStyle="bold"
               android:textSize="20sp"
               android:layout_margin="10dp"/>
           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:boxCornerRadiusBottomEnd="10dp"
               app:boxCornerRadiusBottomStart="10dp"
               app:boxCornerRadiusTopEnd="10dp"
               app:boxCornerRadiusTopStart="10dp"
               >
               <EditText
                   android:id="@+id/city"
                   android:layout_margin="10dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/city"
                   android:inputType="text"
                   android:autofillHints="" />

           </com.google.android.material.textfield.TextInputLayout>


           <com.google.android.material.button.MaterialButton
               android:id="@+id/edit_btn"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/save"
               android:textSize="20sp"
               android:padding="20dp"
               android:backgroundTint="#00BCD4"
               app:cornerRadius="12dp"
               android:layout_gravity="center"
               android:layout_marginTop="70dp"
               android:layout_marginStart="20dp"
               android:layout_marginEnd="20dp"
               android:layout_marginBottom="500dp"
               android:textColor="@color/black"
               android:textStyle="normal"
               android:gravity="center"/>
       </LinearLayout>


   </androidx.core.widget.NestedScrollView>


</LinearLayout>