<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterDonorActivity">
    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_form"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_group"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="20dp"/>

    <Spinner
        android:id="@+id/Spinner_blood_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:inputType="text"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <EditText
            android:id="@+id/mobile_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="20sp"
            android:padding="15dp"
            android:backgroundTint="#00BCD4"
            app:cornerRadius="12dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>