<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityRequestBlood">

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Request Blood"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_group"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="20dp"/>

    <Spinner
        android:id="@+id/Spinner_blood_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"/>

    <CheckBox
        android:id="@+id/emergency_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="Emergency Request" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <EditText
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:hint="@string/quantity"
                android:inputType="number"
                android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ml"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:layout_weight="0.01"
            android:textSize="18sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_request_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_request"
            android:textSize="20sp"
            android:padding="15dp"
            android:backgroundTint="#00BCD4"
            app:cornerRadius="12dp"
            android:layout_margin="20dp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:gravity="center"/>


    </LinearLayout>



</LinearLayout>
